--- a/css/styles.css
+++ b/css/styles.css
@@ -585,15 +585,27 @@ img {
 
 /* Footer */
 
-footer {
+.footer-section {
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
 }
 
-.footer-box {
+.footer-container {
   display: flex;
   align-items: baseline;
+
+  gap: 93px;
+}
+
+.footer-container h3 { 
+  margin-bottom: 20px;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #ffffff;
 }
 
 .logo-footer {
@@ -631,20 +643,6 @@ footer {
   color: rgba(255, 255, 255, 60%);
 }
 
-.footer-social-links {
-  margin-left: 70px;
-}
-
-.footer-social-links h3 {
-  margin-bottom: 20px;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  font-weight: 700;
-  color: #ffffff;
-}
-
 .footer-links-list {
   display: flex;
   gap: 10px;
@@ -669,6 +667,46 @@ footer {
 .footer-list-item:focus {
   background-color: var(--accent-color);
 }
+
+.newsletter-field {
+  display: flex;
+}
+
+.newsletter-input {
+  min-width: 358px;
+  height: 50px;
+  margin-right: 12px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 16px;
+  padding-right: 16px;
+
+  color: var(--primary-color);
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius:  4px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.newsletter-input:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.newsletter-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+
+.newsletter-icon {
+  fill: #fff;
+}
+
+
+/* Backdrop */
 
 .backdrop {
   position: fixed;
@@ -831,6 +869,7 @@ footer {
 }
 
 .form-policy {
+  position: relative;
   margin-bottom: 30px;
   display: flex;
   justify-content: center;
@@ -844,6 +883,14 @@ footer {
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
+
+/* .icon-check {
+  position: absolute;
+  top: 4px;
+  left: 19px;
+  pointer-events: none;
+  cursor: pointer;
+} */
 
 .conditions {
   color: var(--accent-color);
