--- a/css/styles.css
+++ b/css/styles.css
@@ -903,7 +903,7 @@ img {
   background-image: url(../images/icon-check.svg);
   width: 16px;
   height: 15px;
-  background-size: contain;
+  background-size: cover;
   background-origin: border-box;
   border-color: transparent;
 }
