--- a/css/styles.css
+++ b/css/styles.css
@@ -745,7 +745,7 @@ img {
   left: 50%;
 
   width: 528px;
-  min-height: 581px;
+  height: 581px;
 
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -854,6 +854,7 @@ img {
 .comment {
   resize: none;
   width: 100%;
+  height: 120px;
   margin-bottom: 20px;
   padding-top: 12px;
   padding-bottom: 12px;
@@ -887,15 +888,6 @@ img {
 .checkbox {
   appearance: none;
   position: absolute;
- 
-  /* position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden; */
 }
 
 .checkbox-icon { 
@@ -912,6 +904,10 @@ img {
   background-size: cover;
   background-origin: border-box;
   border-color: transparent;
+}
+
+.checkbox:focus + .checkbox-icon {
+  border: 2px solid var(--accent-color);
 }
 
 .conditions {
